# heavyGLES

./: .gitignore  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/hkepler/heavygles/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: GLHelper.h  Triangle.cpp  Triangle.h  native-lib.cpp
app/src/main/java/com/example/hkepler/heavygles/: GL2JNILib.java  GL2JNIView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/hkepler/heavygles/: ExampleUnitTest.java
